data/derived/sp14/progs/unify/prog3335.ml.out
Characters 55-56:
  let palindrome w = (explode w) = (explode (listReverse w));;
                                                         ^
Error: This expression has type string but an expression was expected of type
         'a list
